force-app/main/default/objects/PayrollSetting__c/PayrollSetting__c.object-meta.xml
<CustomObject>
    <label>Payroll Setting</label>
    <nameField>
        <displayFormat>PS-{000000}</displayFormat>
        <label>Payroll Setting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payroll Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>