force-app/main/default/objects/PayrollSetting__c/fields/RPS__c.field-meta.xml
<CustomField>
    <fullName>RPS__c</fullName>
    <label>RPS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>