force-app/main/default/objects/PayrollSetting__c/fields/Sick__c.field-meta.xml
<CustomField>
    <fullName>Sick__c</fullName>
    <label>Sick</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>