force-app/main/default/objects/PayrollSetting__c/fields/Stipend_BYOD__c.field-meta.xml
<CustomField>
    <fullName>Stipend_BYOD__c</fullName>
    <label>Stipend (BYOD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>